# demodel

./: .gitignore  Cargo.toml  README.md  cspell.config.yaml  flake.nix  go.mod  go.sum
cmd/demodel/: main.go
src/: lib.rs  main.rs
src/certificate/: authority.rs  mod.rs
src/certificate/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/proxy/: cache.rs  config.rs  handler.rs  mod.rs
src/utils/: paths.rs
