[package]
name = "demodel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
http-body-util = "0.1.2"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "full"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
