[package]
name = "demodel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
bincode = "1.3.3"
bytes = "1.10.0"
directories = "6.0.0"
http-body-util = "0.1.2"
hudsucker = { version = "0.23.0", features = ["openssl-ca"] }
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
rcgen = "0.13.2"
security-framework = "3.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = { version = "0.10.8" }
time = "0.3.37"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
